--- a/swag_catalog/swag_catalog/Base.lproj/Main.storyboard
+++ b/swag_catalog/swag_catalog/Base.lproj/Main.storyboard
@@ -81,11 +81,107 @@
                     <navigationItem key="navigationItem" title="SWAG STORE" id="pmE-7O-Pgm"/>
                     <connections>
                         <outlet property="categoryTable" destination="bgZ-Em-dhf" id="cT0-MF-guM"/>
+                        <segue destination="FtO-VH-fs2" kind="show" id="G3X-v0-Jh7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1077.5999999999999" y="792.95352323838085"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="0Er-AU-ObD">
+            <objects>
+                <viewController id="FtO-VH-fs2" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="AOZ-TM-x0m"/>
+                        <viewControllerLayoutGuide type="bottom" id="CtG-qu-GE8"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="d7W-AS-QJt">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PRODUCTS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DFU-Cy-G3b">
+                                <rect key="frame" x="16" y="30" width="89.5" height="24"/>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="fr1-Lf-fXD">
+                                <rect key="frame" x="0.0" y="70" width="375" height="533"/>
+                                <color key="backgroundColor" red="0.95294117649999999" green="0.95294117649999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Bmh-uK-eo3">
+                                    <size key="itemSize" width="178" height="258"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="QfO-qp-1ES" customClass="ProductCell" customModule="swag_catalog" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="178" height="258"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="178" height="258"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shirt01" translatesAutoresizingMaskIntoConstraints="NO" id="k4G-8d-LMr">
+                                                    <rect key="frame" x="0.0" y="0.0" width="178" height="178"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="178" id="OcY-PT-9oR"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Demo SWAG STORE T-shirt" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="td2-g5-4cg">
+                                                    <rect key="frame" x="8" y="187" width="162" height="45"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="45" id="Qzk-Ym-dXJ"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="14"/>
+                                                    <color key="textColor" white="0.26679330764840181" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$ 30" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="edf-ry-4f6">
+                                                    <rect key="frame" x="8" y="235" width="162" height="12"/>
+                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="14"/>
+                                                    <color key="textColor" white="0.26679330759999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <color key="backgroundColor" red="0.95294117649999999" green="0.95294117649999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailingMargin" secondItem="td2-g5-4cg" secondAttribute="trailing" id="1zX-RZ-H9d"/>
+                                            <constraint firstAttribute="trailing" secondItem="k4G-8d-LMr" secondAttribute="trailing" id="2gO-EE-o1m"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="edf-ry-4f6" secondAttribute="bottom" constant="3" id="9En-fO-k6G"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="edf-ry-4f6" secondAttribute="trailing" id="XOt-ze-Acf"/>
+                                            <constraint firstItem="k4G-8d-LMr" firstAttribute="leading" secondItem="QfO-qp-1ES" secondAttribute="leading" id="XYo-YI-6dU"/>
+                                            <constraint firstItem="td2-g5-4cg" firstAttribute="leading" secondItem="QfO-qp-1ES" secondAttribute="leadingMargin" id="Yek-w4-OKa"/>
+                                            <constraint firstItem="edf-ry-4f6" firstAttribute="top" secondItem="td2-g5-4cg" secondAttribute="bottom" constant="3" id="fBr-wv-ZB2"/>
+                                            <constraint firstItem="edf-ry-4f6" firstAttribute="leading" secondItem="QfO-qp-1ES" secondAttribute="leadingMargin" id="pd9-Xl-VKR"/>
+                                            <constraint firstItem="td2-g5-4cg" firstAttribute="top" secondItem="k4G-8d-LMr" secondAttribute="bottom" constant="9" id="rht-Q8-Wej"/>
+                                            <constraint firstItem="k4G-8d-LMr" firstAttribute="top" secondItem="QfO-qp-1ES" secondAttribute="top" id="z9o-AY-kKR"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="productImage" destination="k4G-8d-LMr" id="ucD-Ue-q51"/>
+                                            <outlet property="productPrice" destination="edf-ry-4f6" id="2ao-oz-ae6"/>
+                                            <outlet property="productTitle" destination="td2-g5-4cg" id="7mt-sQ-Oie"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.95294117647058818" green="0.95294117647058818" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="fr1-Lf-fXD" firstAttribute="top" secondItem="DFU-Cy-G3b" secondAttribute="bottom" constant="16" id="1SX-9E-e7u"/>
+                            <constraint firstItem="DFU-Cy-G3b" firstAttribute="top" secondItem="AOZ-TM-x0m" secondAttribute="bottom" constant="30" id="CYW-et-Xu5"/>
+                            <constraint firstItem="fr1-Lf-fXD" firstAttribute="leading" secondItem="d7W-AS-QJt" secondAttribute="leading" id="Kcj-CS-GcQ"/>
+                            <constraint firstItem="CtG-qu-GE8" firstAttribute="top" secondItem="fr1-Lf-fXD" secondAttribute="bottom" id="Wok-pg-JAo"/>
+                            <constraint firstItem="DFU-Cy-G3b" firstAttribute="leading" secondItem="d7W-AS-QJt" secondAttribute="leadingMargin" id="akd-5i-BEN"/>
+                            <constraint firstAttribute="trailing" secondItem="fr1-Lf-fXD" secondAttribute="trailing" id="moP-Tm-bBd"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Qq8-Oc-igy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1832.8" y="792.95352323838085"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="uoV-95-5yQ">
@@ -95,6 +191,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="g1w-Zc-4Vw">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="barTintColor" red="0.3411764706" green="0.1529411765" blue="0.15686274510000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -115,5 +212,6 @@
     </scenes>
     <resources>
         <image name="digital" width="1024" height="703"/>
+        <image name="shirt01" width="500" height="500"/>
     </resources>
 </document>
